<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoblanco"
    tools:context=".ConfirmarordenActivity">

    <TextView
        android:id="@+id/texto24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_compra"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="#B1F364"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/texto23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:text="@string/por_favor_confirme_su_compra"
        android:textAlignment="center"
        android:textColor="#FF7203"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/final_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto23"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_editext"
        android:layout_marginRight="35dp"
        android:hint="@string/nombre"
        android:padding="10dp" />

    <EditText
        android:id="@+id/final_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_editext"
        android:layout_below="@+id/final_correo"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="35dp"
        android:hint="@string/direccion_de_entrega"
        android:padding="10dp" />

    <EditText
        android:id="@+id/final_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_direccion"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/custom_editext"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/imag"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/final_telefono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:src="@drawable/logo1" />

    <Button
        android:id="@+id/final_boton_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imag"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:background="#00A2FF"
        android:padding="10dp"
        android:text="@string/terminar_la_compra"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/final_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_nombre"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/custom_editext"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

</RelativeLayout>