<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoblanco"
    android:orientation="vertical"
    tools:context=".DescuentosActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descuentos"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:background="#49C07C"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView_discount"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/salad1"/>

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descuentoOne"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/saucer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descuentoTwo"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="#49C07C"/>

</LinearLayout>