<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/fondoblanco"
    app:cardMaxElevation="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verdebajito">


        <TextView
            android:id="@+id/producto_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@color/lavander"
            android:textColor="#FD4824"/>

        <ImageView
            android:id="@+id/producto_imagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/producto_nombre"
            android:scaleType="centerCrop"
            android:background="@color/verdebajito"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/producto_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/producto_imagen"
            android:textAlignment="center"
            android:textSize="16dp"
            android:text="@string/descricpcion_del_producto"
            android:background="@color/lavander"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/producto_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/producto_descripcion"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:textSize="17dp"
            android:text="@string/cantidad_000"
            android:textColor="#0070FF"/>

        <TextView
            android:id="@+id/producto_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/producto_descripcion"
            android:layout_toEndOf="@id/producto_cantidad"
            android:layout_marginStart="30dp"
            android:textAlignment="center"
            android:textSize="21dp"
            android:text="@string/precio"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>